--- a/README.ipynb
+++ b/README.ipynb
@@ -4,9 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# utils v6.1.3\n",
+    "# utils3 v0.1.0\n",
     "---\n",
-    "The **utils** package is a centralised library of commonly used utilities.  These utilities include database connection classes, colourmaps, config file (JSON) loading, program event logging, error reporting, console user interface, etc.\n",
+    "The **utils3** package is a continuation of `utils v6.1.5`, and has been updated to support Python 3.\n",
+    "\n",
+    "This package is a centralised library of commonly used utilities.  These utilities include database connection classes, colourmaps, config file (JSON) loading, program event logging, error reporting, console user interface, etc.\n",
     "\n",
     "Change log information is included in each module's header.\n",
     "\n",
@@ -73,17 +75,17 @@
     "\n",
     "- **GitHub**\n",
     "```bash\n",
-    "sudo pip install git+https://github.com/s3dev/utils\n",
+    "sudo pip install git+https://github.com/s3dev/utils3\n",
     "```\n",
     "\n",
     "- **Local / Remote Git Repo**\n",
     "```bash\n",
-    "sudo pip install git+file:///<repo/location>/utils\n",
+    "sudo pip install git+file:///<repo/location>/utils3\n",
     "```\n",
     "\n",
     "- **Local Install**\n",
     "```bash\n",
-    "cd <utils_project_directory>\n",
+    "cd <utils3_project_directory>\n",
     "sudo pip install .\n",
     "```\n",
     "\n",
@@ -93,17 +95,17 @@
     "\n",
     "- **GitHub**\n",
     "```bash\n",
-    "pip install git+https://github.com/s3dev/utils\n",
+    "pip install git+https://github.com/s3dev/utils3\n",
     "```\n",
     "\n",
     "- **Local / Remote Git Repo**\n",
     "```bash\n",
-    "pip install git+file:///<repo/location>/utils\n",
+    "pip install git+file:///<repo/location>/utils3\n",
     "```\n",
     "\n",
     "- **Local Install**\n",
     "```bash\n",
-    "cd <utils_project_directory>\n",
+    "cd <utils3_project_directory>\n",
     "pip install .\n",
     "```\n",
     "\n",
@@ -113,38 +115,38 @@
     "For example:\n",
     "\n",
     "```bash\n",
-    "sudo pip install git+https://github.com/s3dev/utils --upgrade\n",
+    "sudo pip install git+https://github.com/s3dev/utils3 --upgrade\n",
     "```\n",
     "\n",
     "\n",
     "## PACKAGE HELP\n",
     "---\n",
     "```python\n",
-    "import utils.utils as utils\n",
+    "import utils3.utils as utils\n",
     "help(utils)\n",
     "```  \n",
     "```python\n",
-    "import utils.config as config\n",
+    "import utils3.config as config\n",
     "help(config)\n",
     "```  \n",
     "```python\n",
-    "from utils.get_datafiles import get_datafiles\n",
+    "from utils3.get_datafiles import get_datafiles\n",
     "help(get_datafiles)\n",
     "```  \n",
     "```python\n",
-    "import utils.log as log\n",
+    "import utils3.log as log\n",
     "help(log)\n",
     "```  \n",
     "```python\n",
-    "import utils.progressbar as progressbar\n",
+    "import utils3.progressbar as progressbar\n",
     "help(progressbar.ProgressBar)\n",
     "```  \n",
     "```python\n",
-    "import utils.reporterror as reporterror\n",
+    "import utils3.reporterror as reporterror\n",
     "help(reporterror)\n",
     "```  \n",
     "```python\n",
-    "import utils.user_interface as ui\n",
+    "import utils3.user_interface as ui\n",
     "help(ui)\n",
     "```  \n",
     "\n",
@@ -154,7 +156,7 @@
     "If you are installing from a local repo and do not have internet access, or the Linux (or Windows) installation is giving you trouble with **cx_Oracle**, use the `--no-deps` argument for **pip**.  This argument will ignore the dependencies (and not try to access the internet), and allow you to install each dependency yourself, *if* you require it.  \n",
     "\n",
     "```bash\n",
-    "sudo pip install git+https://github.com/s3dev/utils --no-deps\n",
+    "sudo pip install git+https://github.com/s3dev/utils3 --no-deps\n",
     "```"
    ]
   }
@@ -175,7 +177,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.14"
   }
  },
  "nbformat": 4,
