--- a/README.ipynb
+++ b/README.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# utils3 v0.1.0\n",
+    "# utils3 v0.2.0\n",
     "---\n",
     "The **utils3** package is a continuation of `utils v6.1.5`, and has been updated to support Python 3.\n",
     "\n",
@@ -28,6 +28,8 @@
     "         + **Oracle()**\n",
     "         + **SQLite()**\n",
     "         + **SQLServer()**\n",
+    "   + dict2obj\n",
+    "      + **Dict2Obj()**\n",
     "   + log\n",
     "      + **Log()**\n",
     "         + write()\n",
@@ -116,6 +118,15 @@
     "\n",
     "```bash\n",
     "sudo pip install git+https://github.com/s3dev/utils3 --upgrade\n",
+    "```\n",
+    "\n",
+    "\n",
+    "## VERSION CHECK\n",
+    "---\n",
+    "To see which version of `utils3` is installed, use the `__version__` attribute from the `utils` module.\n",
+    "```python\n",
+    "from utils3 import utils\n",
+    "utils.__version__\n",
     "```\n",
     "\n",
     "\n",
