x.x.x - Updated README to link to detailed documentation.

--- a/README.ipynb
+++ b/README.ipynb
@@ -4,75 +4,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# utils3 v0.4.0\n",
+    "# utils3\n",
     "---\n",
-    "The **utils3** package is a continuation of `utils v6.1.5`, and has been updated to support Python 3.\n",
+    "This is a centralised Python library of commonly used utilities; which include database connection classes, colourmaps, JSON config file loading, program event logging, error reporting, console interfacing, etc.\n",
     "\n",
-    "This package is a centralised library of commonly used utilities.  These utilities include database connection classes, colourmaps, config file (JSON) loading, program event logging, error reporting, console user interface, etc.\n",
-    "\n",
-    "Change log information is included in each module's header.\n",
+    "The **utils3** package is a continuation of `utils v6.1.5`, which has been updated to support Python 3.5.\n",
     "\n",
     "\n",
-    "## PACKAGE CONFIGURATION\n",
+    "## Example Use & Detailed Design\n",
     "---\n",
-    "Verion 6 of the utils package features the addition of the `database` class module, which includes intuitive database access wrappers for MySQL, Oracle, SQLite and SQL Server databases.\n",
-    "\n",
-    "Outlined below is the current package configuration, with classes listed in **bold**.\n",
-    "\n",
-    "- utils\n",
-    "   + config\n",
-    "      + loadconfig()\n",
-    "   + database\n",
-    "      + **Database()**\n",
-    "         + **MySQL()**\n",
-    "         + **Oracle()**\n",
-    "         + **SQLite()**\n",
-    "         + **SQLServer()**\n",
-    "   + dict2obj\n",
-    "      + **Dict2Obj()**\n",
-    "   + log\n",
-    "      + **Log()**\n",
-    "         + write()\n",
-    "         + write_blank_line()\n",
-    "   + get_datafiles\n",
-    "      + get_datafiles()\n",
-    "   + progressbar\n",
-    "       + **ProgressBar()**\n",
-    "          + update_progress()\n",
-    "   + registry\n",
-    "      + **Registry()**\n",
-    "         + various Win registry access methods and functions\n",
-    "   + reporterror\n",
-    "      + reporterror()\n",
-    "   + user_interface\n",
-    "      + **UserInterface()**\n",
-    "         + various console output and error printing methods\n",
-    "      + **PrintBanner()**\n",
-    "   + utils\n",
-    "      + clean_df()\n",
-    "      + dbconn_mysql()\n",
-    "      + dbconn_oracle()\n",
-    "      + dbconn_sql()\n",
-    "      + dbconn_sqlite()\n",
-    "      + direxists()\n",
-    "      + fileexists()\n",
-    "      + format_exif_date()\n",
-    "      + get_os()\n",
-    "      + getcolormap()\n",
-    "      + getdrivername()\n",
-    "      + getsitepackages()\n",
-    "      + json_read()\n",
-    "      + json_write()\n",
-    "      + listcolormaps()\n",
-    "      + ping()\n",
-    "      + rgb2hex()\n",
-    "      + testimport()\n",
-    "      + unidecode()\n",
+    "Please refer to the linked <a href=\"./docs/build/html/index.html\" style=\"font-weight: bold; text-decoration: none;\" target=\"_blank\">Sphinx documentation</a> for example code use, and detailed design documentation.\n",
     "\n",
     "\n",
-    "## INSTALLATION\n",
+    "## Change Log\n",
     "---\n",
-    "### LINUX\n",
+    "Git change log information can be found <a href=\"./docs/build/html/changelog.html\" style=\"font-weight: bold; text-decoration: none;\" target=\"_blank\">here</a>.\n",
+    "\n",
+    "\n",
+    "## Installation\n",
+    "---\n",
+    "### Linux\n",
     "Any of the following options will get you there ...\n",
     "\n",
     "- **GitHub**\n",
@@ -92,7 +43,7 @@
     "```\n",
     "\n",
     "\n",
-    "### WINDOWS\n",
+    "### Windows\n",
     "Any of the following options will get you there ...\n",
     "\n",
     "- **GitHub**\n",
@@ -112,7 +63,7 @@
     "```\n",
     "\n",
     "\n",
-    "### UPGRADING A CURRENT INSTALLATION\n",
+    "### Upgrading a Current Installation\n",
     "To upgrade a current installation, use an install command as listed above, and append the `--upgrade` argument to the command.  \n",
     "For example:\n",
     "\n",
@@ -121,7 +72,7 @@
     "```\n",
     "\n",
     "\n",
-    "## VERSION CHECK\n",
+    "## Version Check\n",
     "---\n",
     "To see which version of `utils3` is installed, use the `__version__` attribute from the `utils` module.\n",
     "```python\n",
@@ -130,39 +81,43 @@
     "```\n",
     "\n",
     "\n",
-    "## PACKAGE HELP\n",
+    "## Module Help\n",
     "---\n",
     "```python\n",
-    "import utils3.utils as utils\n",
+    "from utils3 import utils\n",
     "help(utils)\n",
     "```  \n",
     "```python\n",
-    "import utils3.config as config\n",
+    "from utils3 import config\n",
     "help(config)\n",
+    "```  \n",
+    "```python\n",
+    "from utils3 import database\n",
+    "help(database)\n",
     "```  \n",
     "```python\n",
     "from utils3.get_datafiles import get_datafiles\n",
     "help(get_datafiles)\n",
     "```  \n",
     "```python\n",
-    "import utils3.log as log\n",
+    "from utils3 import log\n",
     "help(log)\n",
     "```  \n",
     "```python\n",
-    "import utils3.progressbar as progressbar\n",
+    "from utils3 import progressbar\n",
     "help(progressbar.ProgressBar)\n",
     "```  \n",
     "```python\n",
-    "import utils3.reporterror as reporterror\n",
+    "from utils3 import reporterror\n",
     "help(reporterror)\n",
     "```  \n",
     "```python\n",
-    "import utils3.user_interface as ui\n",
-    "help(ui)\n",
+    "from utils3 import user_interface\n",
+    "help(user_interface)\n",
     "```  \n",
     "\n",
     "\n",
-    "## TROUBLESHOOTING\n",
+    "## Troubleshooting\n",
     "---\n",
     "If you are installing from a local repo and do not have internet access, or the Linux (or Windows) installation is giving you trouble with **cx_Oracle**, use the `--no-deps` argument for **pip**.  This argument will ignore the dependencies (and not try to access the internet), and allow you to install each dependency yourself, *if* you require it.  \n",
     "\n",
@@ -175,7 +130,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -189,7 +144,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
