--- a/README.ipynb
+++ b/README.ipynb
@@ -6,9 +6,9 @@
    "source": [
     "# utils3\n",
     "---\n",
-    "This is a centralised Python library of commonly used utilities; which include database connection classes, colourmaps, JSON config file loading, program event logging, error reporting, console interfacing, etc.\n",
+    "The **utils3** library is a collection of commonly used Python 3.5 utilities. These utilities include database connection classes, colourmaps, JSON config file loading, program event logging, error reporting, console user interface, etc.\n",
     "\n",
-    "The **utils3** package is a continuation of `utils v6.1.5`, which has been updated to support Python 3.5.\n",
+    "`utils3` is a Python 3.5 continuation of the discontinued Python 2.7 `utils` package, which ended with v6.1.5.\n",
     "\n",
     "\n",
     "## Example Use & Detailed Design\n",
@@ -74,10 +74,11 @@
     "\n",
     "## Version Check\n",
     "---\n",
-    "To see which version of `utils3` is installed, use the `__version__` attribute from the `utils` module.\n",
+    "To see which version of `utils3` is installed, use the `__version__` attribute from the `utils3` module.\n",
+    "\n",
     "```python\n",
-    "from utils3 import utils\n",
-    "utils.__version__\n",
+    "import utils3\n",
+    "utils3.__version__\n",
     "```\n",
     "\n",
     "\n",
@@ -90,32 +91,10 @@
     "```python\n",
     "from utils3 import config\n",
     "help(config)\n",
-    "```  \n",
+    "```\n",
     "```python\n",
-    "from utils3 import database\n",
-    "help(database)\n",
-    "```  \n",
-    "```python\n",
-    "from utils3.get_datafiles import get_datafiles\n",
-    "help(get_datafiles)\n",
-    "```  \n",
-    "```python\n",
-    "from utils3 import log\n",
-    "help(log)\n",
-    "```  \n",
-    "```python\n",
-    "from utils3 import progressbar\n",
-    "help(progressbar.ProgressBar)\n",
-    "```  \n",
-    "```python\n",
-    "from utils3 import reporterror\n",
-    "help(reporterror)\n",
-    "```  \n",
-    "```python\n",
-    "from utils3 import user_interface\n",
-    "help(user_interface)\n",
-    "```  \n",
-    "\n",
+    "# etc ...\n",
+    "```\n",
     "\n",
     "## Troubleshooting\n",
     "---\n",
